--- a/web/src/main/webapp/registrarUsuario.xhtml
+++ b/web/src/main/webapp/registrarUsuario.xhtml
@@ -11,28 +11,100 @@
 <h:head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <h:outputStylesheet library="css" name="bootstrap.min.css"/>
+    <h:outputStylesheet library="css" name="style.css"/>
+    <h:outputScript library="js" name="bootstrap.bundle.min.js"/>
     <title>Registrar Usuario</title>
 </h:head>
 <h:body>
-    <h:form>
-        <h:panelGrid columns="2" cellpadding="5">
-            <p:outputLabel for="nombre_usuario" value="Nombre"/>
-            <p:inputText id="nombre_usuario" value="#{usuarioBean.usuario.nombre}"/>
 
-            <p:outputLabel for="cedula_usuario" value="Cédula"/>
-            <p:inputText id="cedula_usuario" value="#{usuarioBean.usuario.cedula}"/>
+    <div id="header">
+        <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="/"><i class="pi pi-map-marker"></i> Unilocal</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02"
+                        aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarColor02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="registrarUsuario.xhtml">Registrarse</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="crearLugar.xhtml">Crear Lugar</a>
+                        </li>
+                    </ul>
+                    <div class="d-flex">
+                        <h:form class="d-flex me-2">
+                            <p:inputText styleClass="form-control me-2 input-search" placeholder="¿Qué está buscando?"
+                                         value="#{busquedaBean.busqueda}"/>
+                            <p:commandButton styleClass="btn btn-outline-light btn-buscar" value="Buscar"
+                                             action="#{busquedaBean.buscar}"/>
+                        </h:form>
+                        <p:commandButton styleClass="ui-button-raised ui-button-warning" value="Login"
+                                         action="#{busquedaBean.buscar}"/>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="container">
+        <p:panel header="Registrar Usuario">
+            <h:form>
+                <h:panelGrid columns="3" cellpadding="5">
+                    <p:outputLabel for="nombre_usuario" value="Nombre completo"/>
+                    <p:inputText id="nombre_usuario" value="#{usuarioBean.usuario.nombre}"
+                                 required="true" requiredMessage="Debe ingresar el nombre completo"/>
+                    <p:message for="nombre_usuario"/>
 
-            <p:outputLabel for="email_usuario" value="Email"/>
-            <p:inputText id="email_usuario" value="#{usuarioBean.usuario.email}"/>
+                    <p:outputLabel for="cedula_usuario" value="Cédula"/>
+                    <p:inputText id="cedula_usuario" value="#{usuarioBean.usuario.cedula}" required="true"
+                                 requiredMessage="Debe ingresar un número de cédula"/>
+                    <p:message for="cedula_usuario"/>
 
-            <p:outputLabel for="nickname_usuario" value="Nickname"/>
-            <p:inputText id="nickname_usuario" value="#{usuarioBean.usuario.nickname}"/>
+                    <p:outputLabel for="email_usuario" value="Email"/>
+                    <p:inputText id="email_usuario" value="#{usuarioBean.usuario.email}" required="true"
+                                 requiredMessage="Debe ingresar el email"/>
+                    <p:message for="email_usuario"/>
 
-            <p:outputLabel for="contrasenia_usuario" value="Contraseña"/>
-            <p:inputText id="contrasenia_usuario" value="#{usuarioBean.usuario.contrasenia}"/>
-        </h:panelGrid>
-        <p:commandButton value="Registrar Usuario" action="#{usuarioBean.registrarUsuario}" update="@form"/>
-        <p:growl showDetail="true"/>
-    </h:form>
+                    <p:outputLabel for="nickname_usuario" value="Nickname"/>
+                    <p:inputText id="nickname_usuario" value="#{usuarioBean.usuario.nickname}" required="true"
+                                 requiredMessage="Debe ingresar el nickname"/>
+                    <p:message for="nickname_usuario"/>
+
+                    <p:outputLabel for="ciudad_usuario" value="Ciudad: "/>
+                    <p:selectOneMenu id="ciudad_usuario" value="#{usuarioBean.usuario.ciudadUsuario}"
+                                     converter="#{ciudadConverter}" required="true"
+                                     requiredMessage="Debe seleccionar una ciudad">
+                        <f:selectItem itemLabel="Seleccione: " noSelectionOption="true"/>
+                        <f:selectItems var="ciudad" itemLabel="#{ciudad.nombre}" value="#{usuarioBean.ciudades}"/>
+                    </p:selectOneMenu>
+                    <p:message for="ciudad_usuario"/>
+
+                    <p:outputLabel for="contrasenia_usuario" value="Contraseña"/>
+                    <p:password id="contrasenia_usuario" value="#{usuarioBean.usuario.contrasenia}" required="true"
+                                requiredMessage="Debe ingresar una contraseña"/>
+                    <p:message for="contrasenia_usuario"/>
+                </h:panelGrid>
+                <p:commandButton styleClass="mt-4" value="Registrar Usuario" action="#{usuarioBean.registrarUsuario}" update="@form"/>
+                <p:growl for="mensaje-usuario" showDetail="true"/>
+            </h:form>
+        </p:panel>
+    </div>
+
+    <div class="footer">
+        <div class="py-4 bg-light" align="center">
+            <div class="justify-content-center">
+                <div class="col-10">
+                    <span>Universidad del Quindío - Programación avanzada - 2021</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </h:body>
 </html>
