--- a/web/src/main/webapp/registrarModerador.xhtml
+++ b/web/src/main/webapp/registrarModerador.xhtml
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="registrarUsuario.xhtml">Registrarse</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="crearLugar.xhtml">Crear Lugar</a>
+                            <a class="nav-link" href="registrarLugar.xhtml">Crear Lugar</a>
                         </li>
                     </ul>
                     <div class="d-flex">
