--- a/web/src/main/webapp/resultadoBusqueda.xhtml
+++ b/web/src/main/webapp/resultadoBusqueda.xhtml
@@ -8,12 +8,61 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xml:lang="en" lang="en">
-<h:head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Resultado de busqueda</title>
-</h:head>
-<body>
-  <p>#{busquedaBean.lugares}</p>
-</body>
+<ui:composition template="/WEB-INF/plantilla.xhtml">
+
+    <ui:define name="head">
+        <h:outputStylesheet library="css" name="mapbox-gl.css"/>
+        <h:outputScript library="js" name="mapbox-gl.js"/>
+        <h:outputScript library="js" name="script-home.js"/>
+    </ui:define>
+
+    <ui:define name="title">Unilocal | Resultado busqueda</ui:define>
+
+    <ui:define name="content">
+        <div id="mapa">
+            <div id="map"></div>
+        </div>
+        <div class="container">
+            <h:form id="form">
+                <p:dataView var="lugar" value="#{busquedaBean.lugares}" rows="12" paginator="true"
+                            gridIcon="pi pi-th-large" listIcon="pi pi-bars">
+
+                    <p:dataViewGridItem>
+                        <div class="card" style="width: 18rem;">
+                            <img src="" class="card-img-top" alt="..."/>
+                            <div class="card-body">
+                                <h5 class="card-title">#{lugar.nombre}</h5>
+                                <p class="card-text">#{lugar.descripcion}</p>
+                                <p:commandButton value="Ver detalles"
+                                                 action="#{inicioBean.irADetalle(lugar.id)}"
+                                                 styleClass="ui-button-raised" icon="pi pi-arrow-right"
+                                                 iconPos="right"/>
+                            </div>
+                        </div>
+                    </p:dataViewGridItem>
+
+                    <p:dataViewListItem>
+                        <h:panelGrid columns="3" style="width:100%" columnClasses="logo,detail">
+                            <p:graphicImage styleClass="imagen-lugar"/>
+                            <p:outputPanel>
+                                <h:panelGrid columns="2" cellpadding="5">
+                                    <h:outputText value="Nombre:"/>
+                                    <h:outputText value="#{lugar.nombre}" style="font-weight: bold"/>
+                                    <h:outputText value="Tipo:"/>
+                                    <h:outputText value="#{lugar.tipoLugar.nombre}"/>
+                                    <h:outputText value="Descripción:"/>
+                                    <h:outputText value="#{lugar.descripcion}"/>
+                                </h:panelGrid>
+                            </p:outputPanel>
+                            <p:commandButton value="Ver detalles" action="#{inicioBean.irADetalle(lugar.id)}"
+                                             styleClass="ui-button-raised" icon="pi pi-arrow-right"
+                                             iconPos="right"/>
+                        </h:panelGrid>
+                    </p:dataViewListItem>
+
+                </p:dataView>
+            </h:form>
+        </div>
+    </ui:define>
+</ui:composition>
 </html>
