Se agrego lo de iniciar sesión y se termino con el video 19

--- a/web/src/main/webapp/WEB-INF/plantilla.xhtml
+++ b/web/src/main/webapp/WEB-INF/plantilla.xhtml
@@ -6,6 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
+      xmlns:jsf="http://xmlns.jcp.org/jsf"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xml:lang="en" lang="en">
 <h:head>
@@ -33,11 +34,23 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="/">Inicio</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" jsf:rendered="#{seguridadBean.autenticado and seguridadBean.rol == 'usuario'}">
+                                <a class="nav-link" href="/usuario/registrarLugar.xhtml">Registrar Lugar</a>
+                            </li>
+                            <li class="nav-item" jsf:rendered="#{!seguridadBean.autenticado}">
                                 <a class="nav-link" href="/registrarUsuario.xhtml">Registrarse</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/registrarLugar.xhtml">Registrar Lugar</a>
+                            <li class="nav-item" jsf:rendered="#{seguridadBean.autenticado and seguridadBean.rol == 'usuario'}">
+                                <a class="nav-link" href="/usuario/usuario.xhtml">Perfil</a>
+                            </li>
+                            <li class="nav-item" jsf:rendered="#{seguridadBean.autenticado and seguridadBean.rol == 'administrador'}">
+                                <a class="nav-link" href="/administrador/administrador.xhtml">Perfil</a>
+                            </li>
+                            <li class="nav-item" jsf:rendered="#{seguridadBean.autenticado and seguridadBean.rol == 'moderador'}">
+                                <a class="nav-link" href="/moderador/moderador.xhtml">Perfil</a>
+                            </li>
+                            <li class="nav-item" jsf:rendered="#{seguridadBean.autenticado and seguridadBean.rol == 'administrador'}">
+                                <a class="nav-link" href="/administrador/registrarModerador.xhtml">Registrar Moderador</a>
                             </li>
                         </ul>
                         <div class="d-flex">
@@ -46,14 +59,35 @@
                                              placeholder="¿Qué está buscando?"
                                              value="#{busquedaBean.busqueda}"/>
                                 <p:commandButton styleClass="btn btn-outline-light btn-buscar" value="Buscar"
-                                                 action="#{busquedaBean.buscar}"/>
+                                                 icon="pi pi-search" iconPos="righ" action="#{busquedaBean.buscar}"/>
                             </h:form>
-                            <p:commandButton styleClass="ui-button-raised ui-button-warning" value="Login"
-                                             action="#{busquedaBean.buscar}"/>
+                            <p:commandButton styleClass="ui-button-raised ui-button-warning" value="Iniciar Sesión"
+                                             icon="pi pi-user" iconPos="righ" onclick="PF('login').show()"
+                                             rendered="#{!seguridadBean.autenticado}"/>
+                            <p:commandButton styleClass="ui-button-raised ui-button-warning" value="Cerrar Sesión"
+                                             icon="pi pi-sign-out" iconPos="righ" action="#{seguridadBean.cerrarSesion}"
+                                             rendered="#{seguridadBean.autenticado}"/>
                         </div>
                     </div>
                 </div>
             </nav>
+            <p:dialog header="Iniciar sesión" showEffect="fade" widgetVar="login" modal="true"
+                      rendered="#{!seguridadBean.autenticado}">
+                <h:form rendered="#{!seguridadBean.autenticado}">
+                    <h:panelGrid columns="3" cellpadding="5">
+                        <p:outputLabel for="email_login" value="Email ó Nickname:"/>
+                        <p:inputText id="email_login" value="#{seguridadBean.emailOrNick}" required="true"/>
+                        <p:message for="email_login"/>
+
+                        <p:outputLabel for="password_login" value="Password:"/>
+                        <p:password id="password_login" value="#{seguridadBean.contrasenia}" required="true"/>
+                        <p:message for="password_login"/>
+                    </h:panelGrid>
+                    <p:commandButton value="Iniciar Sesión" action="#{seguridadBean.iniciarSesion}"
+                                     icon="pi pi-sign-in" iconPos="left" styleClass="mt-4" update="@form"/>
+                    <p:growl for="mensaje-sesion" showDetail="true"/>
+                </h:form>
+            </p:dialog>
         </ui:insert>
     </div>
     <div id="content" class="container mt-4 mb-4">
