--- a/web/src/main/webapp/usuario/registrarLugar.xhtml
+++ b/web/src/main/webapp/usuario/registrarLugar.xhtml
@@ -62,13 +62,18 @@
                             <p:message for="descripcion_lugar"/>
 
                             <p:outputLabel for="imagenes_lugar" value="Imágenes: "/>
-                            <p:fileUpload id="imagenes_lugar" listener="#{lugarBean.subirImagenes}"
-                                          mode="advance" multiple="true" sizeLimit="1000000" fileLimit="5"
-                                          allowTypes="/(\.|\/)(gif|jpe?g|png)$/" required="true"/>
+                            <p:fileUpload id="imagenes_lugar" listener="#{lugarBean.subirImagenes}" mode="advanced" dragDropSupport="true"
+                                          update="messages" multiple="true" sizeLimit="1000000" fileLimit="5"
+                                          allowTypes="/(\.|\/)(gif|jpe?g|png)$/"/>
+                            <p:message for="imagenes_lugar"/>
+
+
+
+                            <p:growl id="messages" showDetail="true"/>
 
                         </h:panelGrid>
                         <p:commandButton action="#{lugarBean.registrarLugar()}" value="Registrar Lugar" update="@form"/>
-                        <p:growl for="mensaje_bean" showDetail="true"/>
+                        <p:growl for="mensaje_lugar" showDetail="true"/>
                     </h:form>
                 </div>
             </div>
